[project]
name = "s3-vector-bucket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
    "dotenv>=0.9.9",
    "hnswlib>=0.8.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "lab>=8.4",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.0",
]
